Add PoseNet with react-posenet

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-posenet": "^0.1.7",
     "twin.macro": "^1.7.0"
   },
   "devDependencies": {
