--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.46",
+    "@types/react-dom": "16.9.8",
     "typescript": "^3.9.7"
   },
   "babelMacros": {
